--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="section-content">
             <center>
                 <h2>Resume</h2>
-                <a href="C:\Users\dhara\Downloads" class="download-button" download>Download CV</a>
+                <a href="https://github.com/Roguebharath/bharath/blob/main/bharath%20kumar%20(1)_page-0001.jpg?raw=true" class="download-button" download>Download CV</a>
             </center>
         </div>
     </section>
