--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="C:\Users\JAS\Downloads" alt="" class="profile-picture">
+            <img src="bharath.jpg" alt="" class="profile-picture">
             <h1>BHARATH KUMAR </h1>
             <p>Computer Science with AI Graduate | Web Developer | AI Enthusiast</p>
         </div>
